--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,7 @@
 }
 
 body {
-  max-width: 40em;
+  max-width: 45em;
   margin: auto;
   font-family: var(--font-sans), serif;
   background-color: var(--colour-background-grey);
